<resources>
    <string name="app_name">M-Hike</string>
    <string name="home">Home</string>
    <string name="hike">Hike</string>
    <string name="account">Account</string>
    <string name="settings">Settings</string>
    <string name="add">Add</string>
    <string name="create_new_hike">Create new hike</string>
    <string name="add_observation">Add observation</string>
    <string name="new_record">New</string>
    <string name="remove">Remove</string>
    <string name="clear">Clear</string>
    <string name="hiking">Hiking</string>
    <string name="add_photo">Add photo</string>
    <string name="parking_available">Parking Available?</string>
    <string name="hike_date">Hike Date</string>
    <string name="hike_location">Hike Location</string>
    <string name="hike_name">Hike Name</string>
    <string name="hike_length">Hike Length</string>
    <string name="choose_difficulty_level">Choose difficulty level</string>
    <string name="hike_difficulty">Hike Difficulty</string>
    <string name="hike_description">Hike Description</string>
    <string name="required_equipments">Required Equipments</string>
    <string name="trekking_poles">Trekking Poles</string>
    <string name="satellite_communicator">Satellite Communicator</string>
    <string name="headlamp">Headlamp</string>
    <string name="water_filtration_system">Water Filtration System</string>
    <string name="gps_map">GPS Map</string>
    <string name="battery_backup">Battery Backup</string>
    <string name="other">Other…</string>
    <string name="other_equipments">Other Equipments</string>
    <string name="number_of_participants">Number of Participants</string>
    <string name="hike_duration">Hike Duration</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="observation">Observation</string>
    <string name="update">Update</string>
    <string name="update2">Update %1$s</string>
    <string name="delete">Delete</string>
    <string name="yes_delete">Yes, delete</string>
    <string name="no_cancel">No, cancel</string>
    <string name="reset_database">Reset database</string>
    <string name="yes_reset">Yes, reset</string>
    <string name="go_back">Go Back</string>
    <string name="add_new_observation">Add new observation</string>
    <string name="observation_date">Observation Date</string>
    <string name="choose_time">Choose time</string>
    <string name="observation_type">Observation Type</string>
    <string name="observation_comment">Observation Comment</string>
    <string name="choose_date">Choose Date</string>
    <string name="pick_date">Pick Date</string>
    <string name="pick_time">Pick Time</string>
    <string name="observation_time">Observation Time</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="ok">OK</string>
    <string name="save_observation">Save observation</string>
    <string name="done">Done</string>
    <string name="observations">Observations</string>
    <string name="delete_observation">Delete observation</string>
    <string name="search_for_hike">Search for hike</string>
    <string name="update_observation">Update observation</string>
    <string name="latitude">Latitude</string>
    <string name="longtitude">Longtitude</string>
    <string name="observation_location">Observation Location</string>
    <string name="pick_new_location">Pick new location</string>

    <string-array name="difficulty">
        <item>1 - Easy</item>
        <item>2 - Moderate</item>
        <item>3 - Moderately Strenuous</item>
        <item>4 - Strenuous</item>
        <item>5 - Very Difficult</item>
    </string-array>

    <string-array name="observation_type">
        <item>Animals sighting</item>
        <item>Vegetation</item>
        <item>Weather condition</item>
        <item>Trails condition</item>
        <item>Sight</item>
    </string-array>

    <string-array name="advanced_search">
        <item>by name</item>
        <item>by location</item>
        <item>by length</item>
        <item>by date</item>
        <item>has observation</item>
    </string-array>

</resources>