<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dialogbkg">

    <ImageView
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_remove"
        android:layout_gravity="center|top"
        android:scaleType="centerCrop"
        android:contentDescription="@string/remove" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/addText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="viewStart"
            android:text="@string/new_record"
            android:padding="8dp"
            android:textColor="@color/lavender"
            android:layout_marginStart="12dp"
            android:textSize="25sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_clear"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="12dp"
            android:id="@+id/cancelButton"
            android:contentDescription="@string/clear" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/layoutNewHike"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="10dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_hiking"
            android:contentDescription="@string/hiking" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_new_hike"
            android:textColor="@color/lavender"
            android:layout_marginStart="10dp"
            android:textSize="18sp"/>

    </LinearLayout>

</LinearLayout>