<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lavender">

    <TextView
        android:id="@+id/observationTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="20dp"
        android:text="@string/add_new_observation"
        android:textSize="24sp"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/observationTypeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="12dp"
        android:text="@string/observation_type"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:drawableLeftCompat="@drawable/ic_baseline_camera"
        android:drawablePadding="2dp"
        app:drawableTint="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/observationTitle" />

    <Spinner
        android:id="@+id/observationTypeSpinner"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/bg_spinner"
        android:dropDownVerticalOffset="40dp"
        android:popupBackground="#494F88"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/observationTypeText" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dateInputLayout"
        style="@style/TextField"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="4dp"
        android:hint="@string/date"
        app:boxStrokeWidth="2dp"
        app:hintAnimationEnabled="true"
        app:hintEnabled="true"
        app:layout_constraintEnd_toStartOf="@+id/timeInputLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/observationTypeSpinner"
        app:startIconDrawable="@drawable/ic_baseline_date"
        app:startIconTint="@color/white">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/dateInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:inputType="none"
            android:text=""
            android:textColorHint="@color/white" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/timeInputLayout"
        style="@style/TextField"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/time"
        app:boxStrokeWidth="2dp"
        app:hintAnimationEnabled="true"
        app:hintEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/dateInputLayout"
        app:layout_constraintTop_toBottomOf="@+id/observationTypeSpinner"
        app:startIconDrawable="@drawable/ic_baseline_time"
        app:startIconTint="@color/white">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/timeInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:inputType="none"
            android:text=""
            android:textColorHint="@color/white" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/pickDateBtn"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="4dp"
        android:backgroundTint="@color/white"
        android:text="@string/pick_date"
        android:textColor="@color/lavender"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/pickTimeBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dateInputLayout" />

    <Button
        android:id="@+id/pickTimeBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="32dp"
        android:backgroundTint="@color/white"
        android:text="@string/pick_time"
        android:textColor="@color/lavender"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/pickDateBtn"
        app:layout_constraintTop_toBottomOf="@+id/timeInputLayout" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/commentInputLayout"
        style="@style/TextField"
        app:startIconDrawable="@drawable/ic_baseline_comment"
        app:startIconTint="@color/white"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/observation_comment"
        app:counterEnabled="true"
        app:counterTextColor="@color/white"
        app:endIconDrawable="@drawable/ic_baseline_clear_text"
        app:endIconMode="clear_text"
        app:endIconTint="@color/white"
        app:boxStrokeWidth="2dp"
        app:hintAnimationEnabled="true"
        app:hintEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pickDateBtn">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/commentInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text|textCapSentences|textMultiLine"
            android:textColorHint="@color/white" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/imageViewLayout"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="32dp"
        app:cardCornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/commentInputLayout">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:contentDescription="@string/observation"
            android:background="@color/white"
            android:src="@drawable/ic_baseline_add_photo"/>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>